# dataChallenge

./: pyproject.toml
data/: SGP - Portfólio - Horário de Gravação.xlsx
src/: main.py
