[tool.poetry]
name = "horariogravacao"
version = "0.1.0"
description = ""
authors = ["João Dorea <84815558+joaopdorea@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
streamlit = "^1.37.1"
openpyxl = "^3.1.5"
seaborn = "^0.13.2"
numpy = "^2.1.0"
matplotlib = "^3.9.2"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
